--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -19,3 +19,9 @@ knitr::kable(
 ```
 
 You can write citations, too. For example, we are using the **bookdown** package [@R-bookdown] in this sample book, which was built on top of R Markdown and **knitr** [@xie2015].
+
+Here's equation \@ref(eq:binom)
+
+$$
+f\left(k\right)=\binom{n}{k}p^k\left(1-p\right)^{n-k} (\#eq:binom)
+$$
